# ProcessamentoDigitalDeImagens

./: README.md
Projeto/: CMakeCache.txt  CMakeLists.txt  ImagePanel.cpp  ImagePanel.h  Main.cpp  MainFrame.cpp  MainFrame.h  Makefile  Projeto.cbp  Projeto.layout  cmake_install.cmake  filter.cpp  filter.h
